--- a/views/registro_cliente_juridico.ejs
+++ b/views/registro_cliente_juridico.ejs
@@ -12,7 +12,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="./comportamiento.js"></script>
+    <script src="./imagenes/comportamiento.js"></script>
   </head>
   <body>
     <header>
