--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -27,95 +27,70 @@
         font-size: 1.2em;
         margin-bottom: 10px;
       }
-      .cerrarSesion {
-        background-color: #f44336;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        padding: 10px;
-        margin: 10px;
-        cursor: pointer !important;
-        width: 100px !important;
-      }
     </style>
   </head>
   <body>
-    <% if (typeof username !== 'undefined') { %>
-    <header>
-      <img id="logo" src="../imagenes/logo.png" width="200px" height="auto" />
-      <div class="usuario">
-        <button class="cerrarSesion">Cerrar Sesión</button>
-        <button class="notificacion">
-          <ion-icon name="notifications-outline"></ion-icon>
-        </button>
-        <img
-          id="foto-perfil"
-          src="../imagenes/koala vestido de ejecutivo.png"
-          width="50px"
-          height="auto"
-        />
-      </div>
-    </header>
+    <% if (typeof username !== 'undefined') { %> <%- include('header') %>
     <div class="sidebar">
       <h2>Módulos</h2>
       <nav class="navegacion">
         <ul>
           <li>
-            <a href="inicio.html">
+            <a href="inicio">
               <ion-icon name="home-outline"></ion-icon>
               <span>Inicio</span>
             </a>
           </li>
           <li>
-            <a href="inventario.html">
+            <a href="inventario">
               <ion-icon name="cube-outline"></ion-icon>
               <span>Inventario</span>
             </a>
           </li>
           <li>
-            <a href="ensamblaje.html">
+            <a href="ensamblaje">
               <ion-icon name="hammer-outline"></ion-icon>
               <span>Ensamblaje</span>
             </a>
           </li>
           <li>
-            <a href="pruebas.html">
+            <a href="pruebas">
               <ion-icon name="checkbox-outline"></ion-icon>
               <span>Pruebas</span>
             </a>
           </li>
           <li>
-            <a href="aviones.html">
+            <a href="aviones">
               <ion-icon name="airplane-outline"></ion-icon>
               <span>Aviones</span>
             </a>
           </li>
           <li>
-            <a href="ordenes y transporte.html">
+            <a href="ordenes y transporte">
               <ion-icon name="paper-plane-outline"></ion-icon>
               <span>Ordenes de Producción y Transporte</span>
             </a>
           </li>
           <li>
-            <a href="clientes y proveedores.html">
+            <a href="clientes y proveedores">
               <ion-icon name="person-outline"></ion-icon>
               <span>Clientes y Proveedores</span>
             </a>
           </li>
           <li>
-            <a href="personal.html">
+            <a href="personal">
               <ion-icon name="people-outline"></ion-icon>
               <span>Personal</span>
             </a>
           </li>
           <li>
-            <a href="reportes.html">
+            <a href="reportes">
               <ion-icon name="document-attach-outline"></ion-icon>
               <span>Reportes</span>
             </a>
           </li>
           <li>
-            <a href="roles y permisos.html">
+            <a href="roles y permisos">
               <ion-icon name="lock-closed-outline"></ion-icon>
               <span>Roles y Permisos</span>
             </a>
@@ -144,19 +119,5 @@
     </main>
     <% } %> <% if (typeof username === 'undefined') { %> <%-
     include('no-permiso') %> <% } %>
-    <script>
-      const cerrarSesion = document.querySelector(".cerrarSesion");
-      cerrarSesion.addEventListener("click", () => {
-        fetch("/logout", {
-          method: "POST",
-        })
-          .then((res) => res.json())
-          .then((data) => {
-            if (data.ok) {
-              window.location.href = "/login";
-            }
-          });
-      });
-    </script>
   </body>
 </html>
