--- a/views/no-permiso.ejs
+++ b/views/no-permiso.ejs
@@ -8,6 +8,7 @@
       .no-permiso {
         display: flex;
         flex-direction: column;
+        font-family: Arial, Helvetica, sans-serif;
         align-items: center;
         justify-content: center;
         height: 100vh;
