--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,16 +1,7 @@
 <header>
-  <img id="logo" src="../imagenes/logo.png" width="200px" height="auto" />
+  <img src="../imagenes/logo.png" width="200px" height="auto" />
   <div class="usuario">
-    <button class="cerrarSesion">Cerrar Sesión</button>
-    <button class="notificacion">
-      <ion-icon name="notifications-outline"></ion-icon>
-    </button>
-    <img
-      id="foto-perfil"
-      src="../imagenes/koala vestido de ejecutivo.png"
-      width="50px"
-      height="auto"
-    />
+    <button class="btn btn-danger cerrarSesion">Cerrar Sesión</button>
   </div>
 </header>
 <script>
