--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -13,6 +13,10 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
     <style>
+      * {
+        box-sizing: border-box;
+        font-family: Arial, Helvetica, sans-serif;
+      }
       .bienvenida {
         margin-top: 50px;
         padding: 20px;
@@ -30,79 +34,8 @@
     </style>
   </head>
   <body>
-    <% if (typeof username !== 'undefined') { %> <%- include('header') %>
-    <div class="sidebar">
-      <h2>Módulos</h2>
-      <nav class="navegacion">
-        <ul>
-          <li>
-            <a href="inicio">
-              <ion-icon name="home-outline"></ion-icon>
-              <span>Inicio</span>
-            </a>
-          </li>
-          <li>
-            <a href="inventario">
-              <ion-icon name="cube-outline"></ion-icon>
-              <span>Inventario</span>
-            </a>
-          </li>
-          <li>
-            <a href="ensamblaje">
-              <ion-icon name="hammer-outline"></ion-icon>
-              <span>Ensamblaje</span>
-            </a>
-          </li>
-          <li>
-            <a href="pruebas">
-              <ion-icon name="checkbox-outline"></ion-icon>
-              <span>Pruebas</span>
-            </a>
-          </li>
-          <li>
-            <a href="aviones">
-              <ion-icon name="airplane-outline"></ion-icon>
-              <span>Aviones</span>
-            </a>
-          </li>
-          <li>
-            <a href="ordenes y transporte">
-              <ion-icon name="paper-plane-outline"></ion-icon>
-              <span>Ordenes de Producción y Transporte</span>
-            </a>
-          </li>
-          <li>
-            <a href="clientes y proveedores">
-              <ion-icon name="person-outline"></ion-icon>
-              <span>Clientes y Proveedores</span>
-            </a>
-          </li>
-          <li>
-            <a href="personal">
-              <ion-icon name="people-outline"></ion-icon>
-              <span>Personal</span>
-            </a>
-          </li>
-          <li>
-            <a href="reportes">
-              <ion-icon name="document-attach-outline"></ion-icon>
-              <span>Reportes</span>
-            </a>
-          </li>
-          <li>
-            <a href="roles y permisos">
-              <ion-icon name="lock-closed-outline"></ion-icon>
-              <span>Roles y Permisos</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <div class="linea"></div>
-      <a id="logout" href="">
-        <ion-icon name="log-out-outline"></ion-icon>
-        <span>Sign out</span>
-      </a>
-    </div>
+    <% if (typeof username !== 'undefined') { %> <%- include('header') %> <%-
+    include('side-bar') %>
     <main>
       <div class="contenedor">
         <h1>Inicio</h1>
