--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,27 +14,30 @@
       }
 
       body {
-        width: 100%;
+        width: 100vw;
         height: 100vh;
       }
 
       .container-login {
         display: flex;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         overflow: hidden;
       }
 
       .right {
         width: 50%;
         height: 100%;
+        padding: 24px;
         background-color: #0f172a;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: start;
       }
 
       #parrafos {
         background-color: #0f172a;
-        margin-top: 85%;
-        margin-left: 40px;
       }
 
       .right p {
@@ -42,6 +45,7 @@
         font-size: 14px;
         margin: 10px 0;
         text-align: left;
+        font-weight: bold;
       }
 
       .login {
@@ -91,6 +95,10 @@
         color: #000;
         text-decoration: underline;
       }
+      #loginSpan {
+        margin-top: 4px;
+        font-size: 14px;
+      }
     </style>
   </head>
   <body>
@@ -133,8 +141,8 @@
             />
           </div>
           <button class="buscar-btn" type="submit">Iniciar Sesión</button>
-          <span id="loginSpan"></span>
         </form>
+        <span id="loginSpan"></span>
         <a href="http://localhost:3000/registrar-cliente-natural"
           >Registrar cliente Natural</a
         >
