--- a/views/reporte.ejs
+++ b/views/reporte.ejs
@@ -26,96 +26,8 @@
     ></script>
   </head>
   <body>
-    <% if (typeof username !== 'undefined') { %>
-    <header>
-      <img src="../../imagenes/logo.png" width="200px" height="auto" />
-      <div class="usuario">
-        <button class="btn btn-danger cerrarSesion">Cerrar Sesión</button>
-      </div>
-    </header>
-    <script>
-      const cerrarSesion = document.querySelector(".cerrarSesion");
-      cerrarSesion.addEventListener("click", () => {
-        fetch("/logout", {
-          method: "POST",
-        }).then((res) => {
-          if (res.ok) {
-            setTimeout(() => {
-              window.location.href = "/login";
-            }, 1000);
-          }
-        });
-      });
-    </script>
-    <link rel="stylesheet" href="../../estilos.css" />
-    <aside class="sidebar">
-      <h2>Módulos</h2>
-      <nav class="navegacion">
-        <ul>
-          <li>
-            <a href="/"
-              ><ion-icon name="home-outline"></ion-icon><span>Inicio</span></a
-            >
-          </li>
-          <li>
-            <a href="/avion"
-              ><ion-icon name="airplane-outline"></ion-icon
-              ><span>Aviones</span></a
-            >
-          </li>
-          <li>
-            <a href="/prueba"
-              ><ion-icon name="checkbox-outline"></ion-icon
-              ><span>Pruebas</span></a
-            >
-          </li>
-          <li>
-            <a href="/proveedor"
-              ><ion-icon name="person-outline"></ion-icon
-              ><span>Proveedores</span></a
-            >
-          </li>
-          <li>
-            <a href="/empleado"
-              ><ion-icon name="people-outline"></ion-icon
-              ><span>Personal</span></a
-            >
-          </li>
-          <li>
-            <a href="/rol"
-              ><ion-icon name="lock-closed-outline"></ion-icon
-              ><span>Roles y Permisos</span></a
-            >
-          </li>
-          <li>
-            <a href="/inventario"
-              ><ion-icon name="cube-outline"></ion-icon
-              ><span>Inventario</span></a
-            >
-          </li>
-          <li>
-            <a href="/ensamblaje"
-              ><ion-icon name="hammer-outline"></ion-icon
-              ><span>Ensamblaje</span></a
-            >
-          </li>
-          <li>
-            <a href="/ordenes y transporte"
-              ><ion-icon name="paper-plane-outline"></ion-icon
-              ><span>Ordenes de Producción y Transporte</span></a
-            >
-          </li>
-          <li>
-            <a href="/reportes"
-              ><ion-icon name="document-attach-outline"></ion-icon
-              ><span>Reportes</span></a
-            >
-          </li>
-        </ul>
-      </nav>
-      <div class="linea"></div>
-    </aside>
-
+    <% if (typeof username !== 'undefined') { %> <%- include('header') %> <%-
+    include('side-bar') %>
     <main>
       <h1><%= nombreEntidad.toUpperCase() %></h1>
       <section>
