--- a/views/reportes.ejs
+++ b/views/reportes.ejs
@@ -11,7 +11,14 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="comportamiento.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/2.2.0/css/dataTables.bootstrap5.css"
+    />
     <style>
       table {
         width: 100%;
