--- a/views/side-bar.ejs
+++ b/views/side-bar.ejs
@@ -1,11 +1,38 @@
 <link rel="stylesheet" href="../estilos.css" />
-<div class="sidebar">
+<aside class="sidebar">
   <h2>Módulos</h2>
   <nav class="navegacion">
     <ul>
       <li>
-        <a href="/inicio"
+        <a href="/"
           ><ion-icon name="home-outline"></ion-icon><span>Inicio</span></a
+        >
+      </li>
+      <li>
+        <a href="/avion"
+          ><ion-icon name="airplane-outline"></ion-icon><span>Aviones</span></a
+        >
+      </li>
+      <li>
+        <a href="/prueba"
+          ><ion-icon name="checkbox-outline"></ion-icon><span>Pruebas</span></a
+        >
+      </li>
+      <li>
+        <a href="/proveedor"
+          ><ion-icon name="person-outline"></ion-icon
+          ><span>Proveedores</span></a
+        >
+      </li>
+      <li>
+        <a href="/empleado"
+          ><ion-icon name="people-outline"></ion-icon><span>Personal</span></a
+        >
+      </li>
+      <li>
+        <a href="/rol"
+          ><ion-icon name="lock-closed-outline"></ion-icon
+          ><span>Roles y Permisos</span></a
         >
       </li>
       <li>
@@ -19,30 +46,9 @@
         >
       </li>
       <li>
-        <a href="/pruebas"
-          ><ion-icon name="checkbox-outline"></ion-icon><span>Pruebas</span></a
-        >
-      </li>
-      <li>
-        <a href="/aviones"
-          ><ion-icon name="airplane-outline"></ion-icon><span>Aviones</span></a
-        >
-      </li>
-      <li>
         <a href="/ordenes y transporte"
           ><ion-icon name="paper-plane-outline"></ion-icon
           ><span>Ordenes de Producción y Transporte</span></a
-        >
-      </li>
-      <li>
-        <a href="/clientes y proveedores"
-          ><ion-icon name="person-outline"></ion-icon
-          ><span>Clientes y Proveedores</span></a
-        >
-      </li>
-      <li>
-        <a href="/personal"
-          ><ion-icon name="people-outline"></ion-icon><span>Personal</span></a
         >
       </li>
       <li>
@@ -51,17 +57,7 @@
           ><span>Reportes</span></a
         >
       </li>
-      <li>
-        <a href="/roles-y-permisos"
-          ><ion-icon name="lock-closed-outline"></ion-icon
-          ><span>Roles y Permisos</span></a
-        >
-      </li>
     </ul>
   </nav>
   <div class="linea"></div>
-  <a id="logout" href="">
-    <ion-icon name="log-out-outline"></ion-icon>
-    <span>Sign out</span>
-  </a>
-</div>
+</aside>
