--- a/views/tabla.ejs
+++ b/views/tabla.ejs
@@ -50,9 +50,10 @@
               <% }) %>
               <td>
                 <button
+                data-bs-toggle="modal" data-bs-target="#modal<%=nombreEntidad%>"
                   class="btn btn-outline-warning"
                   id=""
-                  onclick="modifyEntidad(<%= element.id %>,<%= element?.tipo %>)"
+                  onclick="get<%=nombreEntidad%>(<%= element.id %>,'<%= element?.tipo %>')"
                 >
                   Modificar
                 </button>
@@ -108,7 +109,7 @@
                 <label for="">Duracion</label>
                 <input id="duracionPrueba" class="form-control" type="text" required placeholder="HHH:MM:SS" name="duracion" pattern="[0-9]{3}:[0-9]{2}:[0-9]{2}">
                 <label for="">Zona de la prueba:</label>
-                <select name="zona" id="zonaPrueba">
+                <select name="zona" id="zonaPrueba" required>
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -253,6 +254,8 @@
     include('no-permiso') %> <% } %>
     <script>
       new DataTable("#contenido");
+      let  idACTUAL;
+      let tipoPActual;
 
       function deleteEntidad(id, tipoP) {
         if (tipoP) {
@@ -283,14 +286,6 @@
           })
           .catch((error) => console.error("Error:", error));
       }
-
-      function modifyEntidad(id) {
-        // window.location.href = `/<%= nombreEntidad %>/${id}/modificar`;
-      }
-
-      // document
-      //   .getElementById("crearNuevo")
-      //   .addEventListener("click", createEntidad);
 
       //CARGAR ESTADOS, MUNICIPIOS Y PARROQUIAS
       const estadoSelect = document.getElementById("estado");
@@ -406,61 +401,106 @@
         const descripcion = document.getElementById("descripcionModelo").value;
 
         
-        const avion = {
+        let avion = {
           nombre: nombre,
           descripcion: descripcion
         };
-
-        console.log(nombre);
-        console.log(descripcion);
-
-        console.log(avion);
-
-        fetch("/avion", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify(avion),
-        })
-          .then((response) => {
-            if (response.ok) {
-              alert("Avion creado exitosamente");
-              window.location.reload();
-            } else {
-              alert("Error al crear el avion");
-            }
+        
+        if(!idACTUAL) {
+          fetch("/avion", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(avion),
           })
-          .catch((error) => console.error("Error:", error));
+            .then((response) => {
+              if (response.ok) {
+                alert("Avion creado exitosamente");
+                window.location.reload();
+              } else {
+                alert("Error al crear el avion");
+              }
+            })
+            .catch((error) => console.error("Error:", error));
+        } else {
+          avion = {
+            nombre: nombre,
+            descripcion: descripcion,
+            id: idACTUAL
+          }
+          fetch(`/avion/${idACTUAL}`, {
+            method: "PUT",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(avion),
+          })
+            .then((response) => {
+              if (response.ok) {
+                alert("Avion modificado exitosamente");
+                window.location.reload();
+              } else {
+                alert("Error al modificar el avion");
+              }
+            })
+            .catch((error) => console.error("Error:", error));
+        }
       }
       function guardarPrueba() {
         const nombre = document.getElementById("nombrePrueba").value;
         const duracion = document.getElementById("duracionPrueba").value;
         const tipo = document.getElementById("tipoPrueba").value;
         const zona = document.getElementById("zonaPrueba").value;
-        const prueba = {
+        let prueba = {
           nombre,
           duracion,
           tipo,
           zona,
         };
-
-        fetch("/prueba", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify(prueba),
-        })
-          .then((response) => {
-            if (response.ok) {
-              alert("Prueba creada exitosamente");
-              window.location.reload();
-            } else {
-              alert("Error al crear la prueba");
-            }
+        if(!idACTUAL){  
+          fetch("/prueba", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(prueba),
           })
-          .catch((error) => console.error("Error:", error));
+            .then((response) => {
+              if (response.ok) {
+                alert("Prueba creada exitosamente");
+                window.location.reload();
+              } else {
+                alert("Error al crear la prueba");
+              }
+            })
+            .catch((error) => console.error("Error:", error));
+        } else {
+          prueba = {
+            nombre,
+            duracion,
+            tipo,
+            zona,
+            id: idACTUAL
+          }
+          fetch(`/prueba/${idACTUAL}`, {
+            method: "PUT",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(prueba),
+          })
+            .then((response) => {
+              if (response.ok) {
+                alert("Prueba modificada exitosamente");
+                window.location.reload();
+              } else {
+                alert("Error al modificar la prueba");
+              }
+            })
+            .catch((error) => console.error("Error:", error));
+        }
+
       }
       function guardarProveedor(){
         const razonSocial = document.getElementById("nombreProveedor").value;
@@ -560,6 +600,84 @@
             }
           })
           .catch((error) => console.error("Error:", error));
+      }
+
+      function getavion(id, tipo) {
+        idACTUAL = id;
+        fetch(`/avion/${id}`)
+          .then((response) => response.json())
+          .then((data) => {
+            id = data.id;
+            document.getElementById("nombreModelo").value = data.nombre;
+            document.getElementById("descripcionModelo").value = data.descripcion;
+          });
+      }
+
+      function getprueba(id, tipo) {
+        idACTUAL = id;
+        tipoPActual = tipo;
+        console.log(id, tipoPActual);
+        fetch(`/prueba/${id}`,
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ tipo: tipoPActual }),
+          }
+        )
+        .then((response) => response.json())
+        .then((data) => {
+          document.getElementById("nombrePrueba").value = data.nombre;
+          document.getElementById("duracionPrueba").value = `${data.duracion.hours}:${data.duracion?.minutes ?? '00'}:${data.duracion?.seconds ?? '00'}`;
+          document.getElementById("tipoPrueba").value = data.tipo;
+          document.getElementById("zonaPrueba").value = data.zona;
+          tipoPActual = tipoP;
+          });
+      }
+
+      function getproveedor(id, tipo) {
+        idACTUAL = id;
+        fetch(`/proveedor/${id}`)
+          .then((response) => response.json())
+          .then((data) => {
+            document.getElementById("nombreProveedor").value = data.razonSocial;
+            document.getElementById("calificacionProveedor").value = data.calificacion;
+            document.getElementById("rifProveedor").value = data.rif;
+            document.getElementById("paginaWebProveedor").value = data.paginaWeb;
+            document.getElementById("direccionProveedor").value = data.direccion;
+            document.getElementById("estadoP").value = data.estado;
+            document.getElementById("municipioP").value = data.municipio;
+            document.getElementById("parroquiaP").value = data.parroquia;
+          });
+      }
+
+      function getempleado(id, tipo) {
+        idACTUAL = id;
+        fetch(`/empleado/${id}`)
+          .then((response) => response.json())
+          .then((data) => {
+            document.getElementById("nombreEmpleado").value = data.nombre;
+            document.getElementById("sNombreEmpleado").value = data.sNombre;
+            document.getElementById("apellidoEmpleado").value = data.apellido;
+            document.getElementById("sApellidoEmpleado").value = data.sApellido;
+            document.getElementById("cedulaEmpleado").value = data.cedula;
+            document.getElementById("fechaNacEmpleado").value = data.fechaNac;
+            document.getElementById("direccionEmpleado").value = data.direccion;
+            document.getElementById("rifEmpleado").value = data.rif;
+            document.getElementById("experienciaEmpleado").value = data.experiencia;
+            document.getElementById("parroquia").value = data.parroquia;
+          });
+      }
+
+      function getrol(id, tipo) {
+        idACTUAL = id;
+        fetch(`/rol/${id}`)
+          .then((response) => response.json())
+          .then((data) => {
+            document.getElementById("nombreRol").value = data.nombre;
+            document.getElementById("descripcionRol").value = data.descripcion;
+          });
       }
     </script>
   </body>
