Ultimo commit funcionando

--- a/views/tabla.ejs
+++ b/views/tabla.ejs
@@ -59,7 +59,7 @@
                 </button>
                 <button
                   class="btn btn-danger"
-                  onclick="deleteEntidad(<%= element.id %>,<%= element?.tipo %>)"
+                  onclick="deleteEntidad(<%= element.id %>,'<%= element?.tipo %>')"
                 >
                   Eliminar
                 </button>
